eks-cluster-config/2048_full.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: demo
---

---
apiVersion: v1
kind: Service
metadata:
  namespace: demo
  name: capstone-project-svc
spec:
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP
  type: NodePort
  selector:
    app: capstone-project-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: capstone-project-app
  name: capstone-project-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: capstone-project-svc
              port:
                number: 80
